Patch from Pete with changes by myself (bug #7558): BMidiSynth destructor should delete be_synth.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41717 a95241bf-73f2-0310-859d-f6bbb57e9c96